# coggle

./: README.md  pyproject.toml  training_dataset.csv
scratch/: path_preprocessor.ipynb  spacy_small_test.ipynb  span_subclassifier.ipynb  spandetection.ipynb  spanpreclassifiermodel.ipynb  spanpreclassifierv1.ipynb  training_dataset_queries.txt  training_dataset_span_generator.py
src/coggle/: exceptions.py  intent_classifier.py  main.py  path_preprocessor.py  schema.py  span_detection.py  span_preclassifier_v1.py  span_subclassifier.py
src/coggle/adapters/: unix_file_management.toml
src/coggle/execution/: registry.py  resolver.py
src/coggle/preclassifier_model/: dataset.py  inference.py  model.py  train.py
src/coggle/schemas/: adapter.schema.toml
tests/: test_intent_classifier.py  test_resolver.py  test_span_detection.py
